# pgibbs

./: .gitignore  README  README.md  configure.ac
src/include/: Makefile.am
src/include/gng/: counter.h  misc-func.h  symbol-map.h  symbol-set.h
src/include/pgibbs/: config-base.h  config-hmm.h  config-ws.h  config.h  corpus-base.h  corpus-word.h  definitions.h  dist-dirichlet.h  dist-py.h  dist-pylm.h  labels-base.h  labels-hmm.h  labels-ws.h  model-base.h  model-hmm.h  model-ws.h
src/lib/: Makefile.am  model-base.cc  model-hmm.cc  model-ws.cc
src/test/: Makefile.am  maintest-pgibbs.cc
